add pokeCompair lib

--- a/waterballs/tsconfig.base.json
+++ b/waterballs/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@waterballs/pokeCompair": ["libs/pokeCompair/src/index.ts"],
       "@waterballs/uno": ["libs/uno/src/index.ts"]
     }
   },
