add matchmark lib

--- a/waterballs/nx.json
+++ b/waterballs/nx.json
@@ -66,6 +66,11 @@
         "style": "styled-components",
         "linter": "eslint"
       }
+    },
+    "@nx/react": {
+      "library": {
+        "unitTestRunner": "none"
+      }
     }
   }
 }
