--- a/waterballs/package.json
+++ b/waterballs/package.json
@@ -12,6 +12,8 @@
     "styled-components": "5.3.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.8.0",
     "@nx/cypress": "20.2.1",
@@ -20,6 +22,7 @@
     "@nx/jest": "20.2.1",
     "@nx/js": "20.2.1",
     "@nx/next": "20.2.1",
+    "@nx/react": "20.2.1",
     "@nx/workspace": "20.2.1",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
