--- a/waterballs/tsconfig.base.json
+++ b/waterballs/tsconfig.base.json
@@ -19,7 +19,8 @@
       "@waterballs/match": ["libs/match/src/index.ts"],
       "@waterballs/matchmark": ["libs/matchmark/src/index.ts"],
       "@waterballs/pokeCompair": ["libs/pokeCompair/src/index.ts"],
-      "@waterballs/uno": ["libs/uno/src/index.ts"]
+      "@waterballs/uno": ["libs/uno/src/index.ts"],
+      "@waterballs/world": ["libs/world/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
